<resources>
    <string name="app_name">BST-BII</string>

    <!--主页按钮-->
    <string name="equip_setting">设备配置</string>
    <string name="equip_correct">设备校准</string>
    <string name="temp_press_test">温压测试</string>
    <string name="shake_test">振动测试</string>
    <string name="light_test">照度测试</string>
    <string name="flow_test">流速测试</string>

    <!--设备连接-->
    <string name="equip_conn_successed">设备已连接</string>
    <string name="equip_conn_error">设备连接失败</string>
    <string name="equip_setting_successed">设备配置成功</string>

    <string name="dialog_title_set_queipnum">设置设备编号并配置</string>
    <string name="dialog_display_set_queipnum">请输入设备号：</string>

    <string name="dialog_enter_pwd_title">WIFI连接</string>
    <string name="dialog_enter_pwd_display">请输入密码：</string>

    <string name="write_to_equip_success">写入设备成功</string>
    <string name="write_to_equip_failed">写入配置失败</string>

    <string name="tip_pwd_empty">密码不能为空</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="warn_enter_number">请输入设备号后再确认</string>

    <string name="wifi_connected">Wifi已连接</string>
    <string name="wifi_connected_success">Wifi连接成功</string>
    <string name="wifi_connected_error">Wifi连接失败</string>

    <string name="hotspot_dialog_title">更改热点名称和密码</string>
    <string name="hotspot_tip_notnull">用户名或密码不能为空</string>
    <string name="hotspot_tip_okandopen">热点修改成功并且成功开启</string>
    <string name="hotspot_modifier_fail">修改失败</string>
    <string name="hotspot_open_success">热点开启成功</string>
    <string name="hotspot_open_fail">热点开启失败</string>

    <string name="calibrate_data_write">数据录入</string>
    <string name="calibrate_state">校准状态</string>
    <string name="calibrate_parameter">校准目标参数</string>
    <string name="calibrate_set_data">设置值</string>
    <string name="calibrate_factor_calc">系数计算</string>
    <string name="calibrate_data_r_w">系数读写</string>

    <string name="temp_now_data">温度</string>
    <string name="pressure_now_data">负压</string>
    <string name="shake_now_data">震动</string>
    <string name="start_before_temp">开机前温度</string>
    <string name="write_data">记录各项数据</string>
    <string name="write_refresh">刷新</string>

    <string-array name="target_type_param">
        <item>温度</item>
        <item>负压</item>
        <item>照度</item>
        <item>流速</item>
    </string-array>

    <string name="equip_calibrate">设备校准</string>
    <string name="read_factor">读取参数</string>
    <string name="factor_refresh">参数更新</string>
    <string name="write_factor">写入参数</string>
</resources>
