<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/main_background"
    tools:context="com.mr.bst.ui.activity.MainActivity">
    <include layout="@layout/toolbar"/>
    <Button
        android:id="@+id/equip_setting"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/oval_shape"
        android:text="@string/equip_setting"
        android:textSize="@dimen/sp_20"/>

    <Button
        android:id="@+id/equip_correct"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/oval_shape"
        android:text="@string/equip_correct"
        android:textSize="@dimen/sp_20"/>

    <Button
        android:id="@+id/temp_press_test"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/oval_shape"
        android:text="@string/temp_press_test"
        android:textSize="@dimen/sp_20"/>

    <Button
        android:id="@+id/shake_test"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/oval_shape"
        android:text="@string/shake_test"
        android:textSize="@dimen/sp_20"/>

    <Button
        android:id="@+id/light_test"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/oval_shape"
        android:text="@string/light_test"
        android:textSize="@dimen/sp_20"/>

    <Button
        android:id="@+id/flow_test"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/oval_shape"
        android:text="@string/flow_test"
        android:textSize="@dimen/sp_20"/>

</LinearLayout>
