<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mr.bst.ui.activity.FactorRWActivity">

    <include layout="@layout/toolbar"/>

    <GridView
        android:id="@+id/factor_gridview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal">
        <Button
            android:id="@+id/equip_calibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equip_calibrate"/>
        <Button
            android:id="@+id/read_factor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_factor"/>
        <Button
            android:id="@+id/factor_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factor_refresh"/>
        <Button
            android:id="@+id/write_factor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_factor"/>
    </LinearLayout>
</LinearLayout>
