<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mr.bst.ui.activity.EquipCalibrateActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calibrate_state"/>

            <Switch
                android:id="@+id/switch_calibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@drawable/select_pop_bg"
            android:drawableRight="@mipmap/icon_arrow_down"
            android:gravity="center"
            android:text="测试数据"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/calibrate_data_write"/>

    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1">

    </com.github.mikephil.charting.charts.LineChart>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calibrate_parameter"/>

            <Spinner
                android:id="@+id/target_type_param"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:entries="@array/target_type_param"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calibrate_set_data"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibrate_factor_calc"/>

        <Button
            android:id="@+id/factor_r_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibrate_data_r_w"/>
    </LinearLayout>
</LinearLayout>
